# RustWasm_Eth

./: .gitignore  Cargo.toml  README.md
abi/: my_contract_abi.json
backend/: Cargo.toml
backend/src/: executor.rs  gas_metering.rs  lib.rs  wasm_runtime.rs
benches/: executor_benchmark.rs
contracts/: Cargo.toml
contracts/src/: erc20_contract.rs  eth_integration.rs  governance_contract.rs  lib.rs  web3_utils.rs
core/: Cargo.toml
core/src/: env.rs  error.rs  lib.rs  memory.rs  state.rs
examples/simple_dapp/: Cargo.toml
examples/simple_dapp/src/: main.rs
sandbox/: Cargo.toml
sandbox/src/: isolation.rs  lib.rs  sandbox.rs  security.rs
tests/: contracts_tests.rs
