[workspace]
members = [
    "core",
    "backend",
    "sandbox",
    "examples/simple_dapp"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
homepage = "https://example.com"
repository = "https://github.com/your-repo/rustwasm_eth"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
