[package]
name = "rustwasm_eth_core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "rustwasm_eth_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }          # Serialization and deserialization support for JSON and other formats
serde_json = { workspace = true }     # JSON support for Rust
thiserror = { workspace = true }      # A library for ergonomic error handling in Rust

[dev-dependencies]
criterion = "0.3"                     # Criterion for benchmarking code, useful during development and testing
