[workspace]
members = [
    "core",
    "backend",
    "sandbox",
    "contracts",
    "examples/simple_dapp"
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["nzengi <zenginureddin1@gmail.com>"]
license = "MIT"
homepage = "https://example.com"
repository = "https://github.com/nzengi/rustwasm_eth"

[dependencies]
serde = { version = "1.0", features = ["derive"] } # Serialization and deserialization support
serde_json = "1.0"  # JSON serialization/deserialization
log = "0.4"  # Logging library
thiserror = "1.0"  # Error handling library with convenient macros
ethers = "0.6"  # ethers-rs library for Ethereum integration
tokio = { version = "1", features = ["full"] }  # Async runtime for handling non-blocking operations
dotenv = "0.15"  # Loading environment variables from .env file
